--- a/website/.vitepress/theme/custom.css
+++ b/website/.vitepress/theme/custom.css
@@ -638,20 +638,21 @@ span.no-visual {
     border-color 0.25s,
     background-color 0.25s !important;
 }
+
 .VPButton.brand {
-  background-color: var(--vp-button-brand-bg);
-  border-color: var(--vp-button-brand-border);
-  color: var(--vp-button-brand-text) !important;
+  background-color: var(--vp-button-brand-hover-bg) !important;
+  border-color: var(--vp-button-brand-hover-border) !important;
+  color: var(--vp-button-brand-hover-text) !important;
 }
 .VPButton.brand:hover {
-  background-color: var(--vp-button-brand-hover-bg);
-  border-color: var(--vp-button-brand-hover-border);
-  color: var(--vp-button-brand-hover-text) !important;
+  background-color: var(--vp-button-brand-bg) !important;
+  border-color: var(--vp-button-brand-border) !important;
+  color: var(--vp-button-brand-text) !important;
   opacity: 1 !important;
 }
 .VPButton.brand:active {
-  background-color: var(--vp-button-brand-active-bg);
-  border-color: var(--vp-button-brand-active-border);
+  background-color: var(--vp-button-brand-active-bg) !important;
+  border-color: var(--vp-button-brand-active-border) !important;
   color: var(--vp-button-brand-active-text) !important;
   opacity: 1 !important;
 }
