wip on products page

--- a/website/.vitepress/theme/custom.css
+++ b/website/.vitepress/theme/custom.css
@@ -88,7 +88,7 @@
   --electric-color: #00d2a0;
   --ddn-color: #d0bcff;
   --pglite-color: #f6f95c;
-  --durable-streams-color: rgb(117, 251, 253);
+  --durable-streams-color: #75fbfd;
 
   --vp-code-bg: var(--vp-c-bg-elv);
   --vp-code-color: #9ecbff;
