products: tidy up TanStack DB page.

--- a/website/.vitepress/theme/custom.css
+++ b/website/.vitepress/theme/custom.css
@@ -89,7 +89,7 @@
   --ddn-color: #d0bcff;
   --pglite-color: #f6f95c;
   --durable-streams-color: #75fbfd;
-  --tanstack-db-color: #ff6900;
+  --tanstack-db-color: #FF8C3B;
 
   --vp-code-bg: var(--vp-c-bg-elv);
   --vp-code-color: #9ecbff;
